# trustee

./: README.md  pyproject.toml
contracts/: .env.example  Makefile  README.md
contracts/script/: SmokeMandateRegistry.s.sol
docs/: AP2_DEPLOYMENTS.md  AP2_IMPLEMENTATION_CHECKLIST.md  AP2_OPERATIONS.md  AP2_RESEARCH.md  ARCHITECTURE.md  SIGNING_FINDINGS.md  STEWARD_RESEARCH.md  UNKNOWNS.md
examples/: e2e_steward_test.py  e2e_test.py  test_server.py
src/trustee/: __init__.py  audit.py  bagman.py  budget.py  cdp_facilitator.py  cli.py  errors.py  mandate.py  mandate_registry.py  mandate_store.py  mandate_validator.py  money.py  payment.py  steward.py  storage.py  x402_client.py
tests/: test_ap2_cli.py  test_ap2_mandate.py  test_audit.py  test_bagman.py  test_budget.py  test_cdp_facilitator.py  test_cli_security.py  test_mandate.py  test_mandate_store.py  test_mandate_validator.py  test_payment.py  test_steward.py  test_x402_client.py
