[project]
name = "trustee"
version = "0.1.0"
description = "Autonomous agent payment infrastructure with cryptographic delegation"
requires-python = ">=3.11"
dependencies = [
    "eth-account>=0.13.0",
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27",
    "x402[httpx,evm]>=2.0",
    "pyjwt>=2.10.1",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
ap2 = [
    "ap2 @ git+https://github.com/google-agentic-commerce/AP2.git@main",
]

[project.scripts]
trustee = "trustee.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
